Checking for the next trigger works with new postgresql changes
